# OpenAlpha-Brain

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alpha_tools.json  ast_fingerprints.json  docker-compose.yml  evolution_db.json  experience_cards.json  feature_map.json  loop_engine.py  memorix.yml  pyproject.toml  rag_feedback_weights.json  requirements.txt  run.bat  run.sh  strategy_profiles.json
docs/: ARCHITECTURE.md  (+5 more)
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/: .gitignore  BrainAlphaOps.spec  LICENSE  README.md  build_prod.py  fetch_official_context.py  pyproject.toml  run_pipeline.py
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/.github/workflows/: quality-gate.yml
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/.workbuddy/memory/: 2026-05-15.md
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/brain_alpha_ops/: __init__.py  adaptive_executor.py  agent_guidance_tools.py  agent_research_tools.py  agent_tool_registry.py  agent_tools.py  cli.py  config.py  config_schema.py  config_validation_helpers.py  dataset_defaults.py  diagnosis_gap_coverage.py  e2e_report.py  errors.py  jsonl.py  mcp_server.py  models.py  parameter_audit.py  production_diagnostics.py  redaction.py  runner.py  runtime_constants.py  secure_credentials.py  shared_bounds.py  task_executor.py  tasks.py  web.py  web_async_jobs.py  web_candidate_generation.py  web_check_availability.py  web_check_batch_job.py  web_cloud_snapshot.py  web_config.py  web_config_schema.py  web_csp.py  web_errors.py  web_get_handlers.py  web_handler_dispatch.py  web_html.py  web_http_handler.py  (+18 more)
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/brain_alpha_ops/brain_api/: __init__.py  canonical.py  official.py  official_helpers.py
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/brain_alpha_ops/compliance/: redline_verifier.py
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/config/: run_config.json
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/data/: official_context_refresh_status.json  official_datasets.json  official_datasets.meta.json  official_fields.json  official_fields.meta.json  official_operators.json  official_operators.meta.json
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/docs/: ALPHA_PRODUCTION_DIAGNOSIS_20260522.md  ARCHITECTURE_MODULARIZATION_DIAGNOSIS_20260525.md  ARCHITECTURE_MODULARIZATION_TASK_PROGRESS_20260525.md  BROWSER_E2E_TEST_PROMPT.md  CODE_REVIEW_20260521.md  CODE_REVIEW_20260522.md  CODE_REVIEW_TASK_EXECUTION_20260522.md  COMPREHENSIVE_CODE_REVIEW_20260522.md  DEEP_RESEARCH_TASK_PROGRESS_20260525.md  DELIVERY_ACCEPTANCE_20260527.md  DELIVERY_ACCEPTANCE_20260528.md  DELIVERY_COMPLETION_AUDIT_20260528.md  DIAGNOSTIC_REPORT_20260527.md  DIAGNOSTIC_REPORT_20260528.md  E2E_ARTIFACT_SUMMARY_20260528.json  E2E_ARTIFACT_SUMMARY_20260528.md  E2E_PRODUCTION_TEST_REPORT_20260528.md  E2E_USER_TEST_REPORT_20260527.md  FRONTEND_SURFACE_PARITY_PLAN.json  PRD_v1.1.md  PRODUCTION_DIAGNOSTICS_20260528.json  PRODUCTION_PANEL_TASK_PROGRESS_20260525.md  QUANTGPT_COMPARISON_20260528.md  REACT_BUILD_VERIFICATION.md  RED_BOX_UI_REVIEW_PROGRESS_20260525.md  REVIEW_GAP_CLOSURE_20260530.md  TASK_OBJECTIVES.md  TRACKED_DATA_BOUNDARY_PLAN.json
素材仓库禁止直接引用，可复制代码/WorldQuant-BRAIN-Alpha-main/WorldQuant-BRAIN-Alpha-main/tests/: production_api_stub.py  qa_e2e_new_user_walkthrough.py  qa_full_chain_backend.py  qa_full_chain_frontend.py  test_agent_tools.py  test_alerting.py  test_ashare_adapter.py  test_assistant_context.py  test_assistant_request.py  test_auto_calibrator_coverage.py  test_backtest_polling.py  test_backtest_submission.py  test_brain_contract_check.py  test_budget_and_policy.py  test_candidate_pool.py  test_canonical_alignment.py  test_checkpoint_resume.py  test_cli.py  test_comprehensive_scoring_edge_cases.py  test_config.py  test_config_schema_fallback.py  test_core_modules_comprehensive.py  test_dataset_selection.py  test_diagnosis_gap_coverage.py  test_diagnostic_report_check.py  test_dynamic_research_components.py  test_e2e_report.py  test_enhanced_pipeline_components.py  test_errors.py  test_expression_ast.py  test_expression_sqlite_index.py  test_fetch_official_context.py  test_field_dataset_mapper.py  test_frontend_surface_parity.py  test_generation.py  test_generation_phase.py  test_gitignore_policy.py  test_guided_pipeline.py  test_guided_pipeline_coverage.py  test_hypothesis_library.py  (+75 more)
(+499 files in other folders)
