[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["brain_alpha_ops*"]

[project]
name = "brain-alpha-ops"
version = "0.3.0"
description = "Account-safety-first WorldQuant BRAIN alpha research operations toolkit."
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Brain Alpha Ops Contributors"},
]
keywords = ["worldquant", "brain", "alpha", "quantitative-finance", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pyyaml>=6.0,<7",
    "requests>=2.32.4,<3",
    "jsonschema>=4.20,<5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<7",
]
dev = [
    "ruff>=0.4,<1",
    "mypy>=1.0,<2",
    "pip-audit>=2.7,<3",
]
web = [
    # web server uses standard library only; no extra deps needed
]

[tool.brain-alpha-ops]
default_environment = "production"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
cache_dir = ".pytest_cache_runtime"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require network or external services",
]

[tool.coverage.run]
source = ["brain_alpha_ops"]
omit = [
    "brain_alpha_ops/web/index.html",
    "brain_alpha_ops/brain_api/mock.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
